tests/integration/snapshots/mappings/symlink_target.txt
Error: [ROOT]/contracts/main[LINE]: error: Failed to import: Cannot import symlink file
   2 |             import "@core/math"
     |                    ^^^^^^^^^^^^

